force-app/main/default/objects/Loan__c/Loan__c.object-meta.xml
<CustomObject>
    <description>Instances of loans managed by the Asset Management Team. Reports and Activities are enabled.</description>
    <label>Loan</label>
    <nameField>
        <displayFormat>LN-{000000}</displayFormat>
        <label>Loan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>