force-app/main/default/objects/Loan__c/fields/Current_Loan_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Balance__c</fullName>
    <formula>Gross_Loan_Amount__c +  Total_Charges_on_the_Loan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Loan Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>