force-app/main/default/objects/Loan__c/fields/Date_Loan_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_Loan_Issued__c</fullName>
    <description>The original issue date of the loan</description>
    <inlineHelpText>The original issue date of the loan</inlineHelpText>
    <label>Loan Issue Date</label>
    <type>Date</type>
</CustomField>