force-app/main/default/objects/Loan__c/fields/Gross_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Loan_Amount__c</fullName>
    <description>Initial total amount of the loan</description>
    <inlineHelpText>Initial total amount of the loan</inlineHelpText>
    <label>Gross Loan Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>