force-app/main/default/objects/Loan__c/fields/Loan_Name__c.field-meta.xml
<CustomField>
    <fullName>Loan_Name__c</fullName>
    <description>User-defined name of Loan</description>
    <inlineHelpText>Free-text description used as name of loan</inlineHelpText>
    <label>Loan Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>