force-app/main/default/objects/Loan__c/fields/Security_Address__c.field-meta.xml
<CustomField>
    <fullName>Security_Address__c</fullName>
    <description>Physical address of asset securing the loan</description>
    <inlineHelpText>Geographical address</inlineHelpText>
    <label>Security Address</label>
    <type>Address</type>
</CustomField>