force-app/main/default/objects/Loan__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Duration of the Term in months</description>
    <inlineHelpText>Duration of the Term in months</inlineHelpText>
    <label>Loan Term</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>