force-app/main/default/objects/Loan__c/validationRules/Loan_Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Loan_Amount_Validation</fullName>
    <active>true</active>
    <description>Validate Loan Amount</description>
    <errorConditionFormula>Gross_Loan_Amount__c &lt;= 0</errorConditionFormula>
    <errorMessage>Loan amount must be a positive value</errorMessage>
</ValidationRule>